--- a/app/src/main/res/layout/activity_view_dhaba.xml
+++ b/app/src/main/res/layout/activity_view_dhaba.xml
@@ -31,7 +31,7 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivHoardingPic"
-            loadImage="@{dhabaModelMain.dhabaModel.images}"
+            loadImage="@{dhabaModelMain.dhabaModel.getPrimaryImage()}"
             placeholder="@{R.drawable.ic_image_placeholder}"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_180sdp"
